--- a/Farmer/templates/Farmer/CreateFarmer.html
+++ b/Farmer/templates/Farmer/CreateFarmer.html
@@ -6,7 +6,7 @@
     <div class="row">
     <div class="col-md-1"></div>
         <div class="col-md-3">
-    <div class="box box-success">
+    <div class="box box-primary">
             <div class="box-header with-border">
               <h1 class="box-title">เพิ่มข้อมูลเกษตรกร</h1>
             </div>
