--- a/Farmer/templates/Farmer/CreateHarvest.html
+++ b/Farmer/templates/Farmer/CreateHarvest.html
@@ -6,7 +6,7 @@
     <div class="row">
     <div class="col-md-1"></div>
         <div class="col-md-6">
-    <div class="box box-success">
+    <div class="box box-primary">
             <div class="box-header with-border">
                 <h3 class="box-title">เพิ่มข้อมูล ้อมูลการเก็บเกี่ยวของ</h3><br>
                 <h3>{{ viewplant.fruit_name }}</h3> <h3 class="box-title">สายพันธุ์ :</h3> <h3>{{ viewplant.fruit_breed }}</h3>
