--- a/Farmer/templates/Farmer/CreatePlant.html
+++ b/Farmer/templates/Farmer/CreatePlant.html
@@ -6,7 +6,7 @@
     <div class="row">
     <div class="col-md-1"></div>
         <div class="col-md-6">
-    <div class="box box-success">
+    <div class="box box-primary">
             <div class="box-header with-border">
               <h3 class="box-title">เพิ่มข้อมูลการปลูกของ {{ viewfarmer.name }}   {{ viewfarmer.lastname}} </h3>
             </div>
