--- a/Farmer/templates/Farmer/EditHarvest.html
+++ b/Farmer/templates/Farmer/EditHarvest.html
@@ -6,7 +6,7 @@
     <div class="row">
     <div class="col-md-1"></div>
         <div class="col-md-10">
-    <div class="box box-success">
+    <div class="box box-primary">
             <div class="box-header with-border">
               <h3 class="box-title">เพิ่มข้อมูล ข้อมูลการปลูกของเกษตรกร</h3>
             </div>
