--- a/Farmer/templates/Farmer/ViewPlant.html
+++ b/Farmer/templates/Farmer/ViewPlant.html
@@ -1,11 +1,12 @@
 {% extends "Farmer/base.html" %}
 {% load static %}
 {% block content %}
+{% if user.is_authenticated %}
 <section class="content">
 <div class="row" >
-    <div class="col-md-1">
+    <div class="col-md-3">
 
-<a type="button" class="btn btn-block btn-primary btn-lg" href="{% url 'createPlant' viewfarmer.id %}">เพิ่ม</a>
+<a type="button" class="btn btn-block btn-primary btn-lg" href="{% url 'createPlant' viewfarmer.id %}">เพิ่มข้อมูลการปลูกของ {{ viewfarmer.name }}</a>
     </div>
     <div class="col-md-1">
         <a type="button" class="btn btn-block btn-danger btn-lg" href="{% url 'index' %}">ย้อนกลับ</a>
@@ -15,7 +16,7 @@
     <br>
       <div class="row">
         <!-- /.col -->
-        <div class="col-md-7">
+        <div class="col-md-4">
             <div class="box box-primary">
                 <div class="box-header">
                 <h3 class="box-title">ตาราง ข้อมูลการปลูกของ {{ viewfarmer.name }}   {{ viewfarmer.lastname}}  </h3>
@@ -72,7 +73,32 @@
             </div>
             </div>
         </div>
+      <div>
+                    <div class="col-md-5">
+            <div class="box box-primary">
+                <div class="box-header">
+                <h3 class="box-title">กราฟแสดงข้อมูลการปลูกของ {{ viewfarmer.name }} {{ viewfarmer.lastname }}</h3>
+                </div>
+                <div id="pie-charts">
+                    <script>
+                        var data = [{
+                        values: [{% for VP in viewplant %}{{ VP.scale }},{% endfor %}],
+                        labels: [{% for VP in viewplant %}"{{ VP.fruit_name }}",{% endfor %}],
+                        type: 'pie'
+                        }];
+
+                        var layout = {
+                                        height: 400,
+                                        width: 500
+                                        };
+                        Plotly.newPlot('pie-charts', data, layout);
+                    </script>
+                </div>
+            </div>
+      </div>
+      </div>
+      </div>
           </div>
 </section>
-
+{% endif %}
 {% endblock %}
