--- a/Farmer/templates/Farmer/index.html
+++ b/Farmer/templates/Farmer/index.html
@@ -3,8 +3,8 @@
 {% block content %}
 <section class="content">
 <div class="row" >
-    <div class="col-md-1">
-<a type="button" class="btn btn-block btn-primary btn-lg" href="{% url 'createFarmer' user.id %}">เพิ่ม</a>
+    <div class="col-md-2">
+<a type="button" class="btn btn-block btn-primary btn-lg" href="{% url 'createFarmer' user.id %}">เพิ่มข้อมูลเกษตรกร</a>
         </div>
 
 
@@ -23,7 +23,8 @@
 
 
 
-    <div class="col-md-8"></div>
+    <div class="col-md-5"></div>
+    <div class="col-md-2"><a type="button" class="btn btn-block btn-danger btn-lg" href="{% url 'logout' %}">ออกจากระบบ</a></div>
 </div>
     <br>
 
@@ -32,7 +33,7 @@
 
       <div class="row">
         <!-- /.col -->
-        <div class="col-md-12">
+        <div class="col-md-6">
             <div class="box box-primary">
                 <div class="box-header">
                 <h3 class="box-title">ตาราง ข้อมูลเกษตรกร</h3>
@@ -56,7 +57,7 @@
                 <tbody>
                 {% for VF in famerpage %}
                 <tr role="row" class="odd">
-                  <td><a type="button"  href="{% url 'viewFarmer' VF.id  %}" >{{ VF.name }} {{ VF.lastname }}</a></td>
+                  <td><a type="button"  href="{% url 'viewFarmer' user.id VF.id %}" >{{ VF.name }} {{ VF.lastname }}</a></td>
                     <td>{{ VF.age }}</td>
                     <td>{{ VF.address }}</td>
                     <td>{{ VF.tel }}</td>
@@ -64,9 +65,6 @@
                       <a type="button"  href="{% url 'editFarmer' VF.id  %}">[แก้ไข]</a>
                       <a type="button"  href="{% url 'deleteFarmer' VF.id  %}">[ลบ]</a>
                   </td>
-                <td>
-                    <button class="preview" id="ale">Preview</button>
-                </td>
                 </tr>
                 {% endfor %}
 
