--- a/Farmer/templates/Farmer/CreateFarmer.html
+++ b/Farmer/templates/Farmer/CreateFarmer.html
@@ -5,10 +5,10 @@
     <br>
     <div class="row">
     <div class="col-md-1"></div>
-        <div class="col-md-3">
+        <div class="col-md-10">
     <div class="box box-primary">
             <div class="box-header with-border">
-              <h1 class="box-title">เพิ่มข้อมูลเกษตรกร</h1>
+              <center><h1 class="box-title">เพิ่มข้อมูลเกษตรกร</h1></center>
             </div>
             <div class="box-body">
                 <div class="form-group">
