--- a/Farmer/templates/Farmer/CreatePlant.html
+++ b/Farmer/templates/Farmer/CreatePlant.html
@@ -5,7 +5,7 @@
     <br>
     <div class="row">
     <div class="col-md-1"></div>
-        <div class="col-md-6">
+        <div class="col-md-10">
     <div class="box box-primary">
             <div class="box-header with-border">
               <h3 class="box-title">เพิ่มข้อมูลการปลูกของ {{ viewfarmer.name }}   {{ viewfarmer.lastname}} </h3>
@@ -31,7 +31,7 @@
         </br></br>
             </div>
                 <button class="btn btn-success" type="submit">Add</button>
-                <a href="{% url 'index' %}" class="btn btn-danger" role="button">Cancel</a>
+                <a class="btn btn-danger" role="button" href="{% url 'viewFarmer' viewfarmer.id %}" >Cancel</a>
             </div>
         </form>
             </div>
