--- a/Farmer/templates/Farmer/EditPlant.html
+++ b/Farmer/templates/Farmer/EditPlant.html
@@ -20,7 +20,7 @@
             </fieldset>
 
                 <button class="btn btn-success" type="submit">Add</button>
-                <a href="{% url 'index' %}" class="btn btn-danger" role="button">Cancel</a>
+                <a href="{% url 'viewFarmer' viewfarmers.id %}" class="btn btn-danger" role="button">Cancel</a>
             </div>
         </form>
             </div>
