--- a/Farmer/templates/Farmer/ViewHarvest.html
+++ b/Farmer/templates/Farmer/ViewHarvest.html
@@ -4,18 +4,18 @@
 
 <section class="content">
 <div class="row" >
-    <div class="col-md-3">
-<a type="button" class="btn btn-block btn-primary btn-lg" href="{% url 'createHarvest' viewharvests.Farmer_id_id viewharvests.id %}">เพิ่มข้อมูลการเก็บเกี่ยวของ{{ viewplant.fruit_name }} {{ viewplant.fruit_breed }}</a>
+    <div class="col-md-4">
+<a type="button" class="btn btn-block btn-primary btn-lg" href="{% url 'createHarvest' viewharvests.Farmer_id_id viewharvests.id user.id %}">เพิ่มข้อมูลการเก็บเกี่ยวของ{{ viewplant.fruit_name }} {{ viewplant.fruit_breed }}</a>
     </div>
-    <div class="col-md-1">
-        <a type="button" class="btn btn-block btn-danger btn-lg" href="{% url 'viewFarmer' user.id viewfarmer.id %}">ย้อนกลับ</a>
+    <div class="col-md-2">
+        <a type="button" class="btn btn-block btn-danger btn-lg" href="{% url 'viewFarmer' viewfarmer.id %}">ย้อนกลับ</a>
     </div>
     <div class="col-md-10"></div>
 </div>
     <br>
       <div class="row">
         <!-- /.col -->
-        <div class="col-md-3">
+        <div class="col-md-12">
             <div class="box box-primary">
                 <div class="box-header">
                 <h3 class="box-title">ตาราง ข้อมูลการเก็บเกี่ยวของ {{ viewplant.fruit_name }} สายพันธุ์ : {{ viewplant.fruit_breed }}</h3>
@@ -70,7 +70,7 @@
             </div>
             </div>
         </div>
-      <div class="col-md-9">
+      <div class="col-md-12">
             <div class="box box-primary">
                 <div class="box-header">
                 <h3 class="box-title">กราฟแสดงข้อมูลการเก็บเกี่ยวของ {{ viewplant.fruit_name }} สายพันธุ์ : {{ viewplant.fruit_breed }}</h3>
@@ -124,7 +124,7 @@
                     <script>
                         var data = [{
                         values: [{% for VH in viewharvest %}{{ VH.product }},{% endfor %}],
-                        labels: [{% for VH in viewharvest %}{{ VH.years }},{% endfor %}],
+                        labels: [{% for VH in viewharvest %}{{ VH.years}},{% endfor %}],
                         type: 'pie'
                         }];
 
@@ -141,5 +141,4 @@
           </div>
           </div>
 </section>
-
 {% endblock %}
