--- a/Farmer/templates/Farmer/ViewPlant.html
+++ b/Farmer/templates/Farmer/ViewPlant.html
@@ -1,14 +1,12 @@
 {% extends "Farmer/base.html" %}
 {% load static %}
 {% block content %}
-{% if user.is_authenticated %}
 <section class="content">
 <div class="row" >
-    <div class="col-md-3">
-
-<a type="button" class="btn btn-block btn-primary btn-lg" href="{% url 'createPlant' viewfarmer.id %}">เพิ่มข้อมูลการปลูกของ {{ viewfarmer.name }}</a>
+    <div class="col-md-4">
+<a type="button" class="btn btn-block btn-primary btn-lg" href="{% url 'createPlant' viewfarmer.id user.id %}">เพิ่มข้อมูลการปลูกของ {{ viewfarmer.name }}</a>
     </div>
-    <div class="col-md-1">
+    <div class="col-md-2">
         <a type="button" class="btn btn-block btn-danger btn-lg" href="{% url 'index' %}">ย้อนกลับ</a>
     </div>
     <div class="col-md-10"></div>
@@ -16,7 +14,7 @@
     <br>
       <div class="row">
         <!-- /.col -->
-        <div class="col-md-4">
+        <div class="col-md-12">
             <div class="box box-primary">
                 <div class="box-header">
                 <h3 class="box-title">ตาราง ข้อมูลการปลูกของ {{ viewfarmer.name }}   {{ viewfarmer.lastname}}  </h3>
@@ -46,29 +44,6 @@
                 {% endfor %}
                 </tbody>
               </table></div></div>
-                          <div class="row">
-                      <div class="col-sm-5">
-                      </div>
-                      <div class="col-sm-7">
-                        <div class="pagination">
-                            <span class="step-links">
-        {% if famerpage.has_previous %}
-            <a href="?page=1">หน้าแรก</a>
-            <a href="?page={{ famerpage.previous_page_number }}">ก่อนหน้า</a>
-        {% endif %}
-
-        <span class="current">
-            หน้า {{ famerpage.number }}  จาก {{ famerpage.paginator.num_pages }}
-        </span>
-
-        {% if famerpage.has_next %}
-            <a href="?page={{ famerpage.next_page_number }}">ถัดไป</a>
-            <a href="?page={{ famerpage.paginator.num_pages }}">สุดท้าย</a>
-        {% endif %}
-    </span>
-</div>
-                      </div>
-                  </div>
                 </div>
             </div>
             </div>
@@ -100,5 +75,4 @@
       </div>
           </div>
 </section>
-{% endif %}
 {% endblock %}
