--- a/Farmer/templates/Farmer/index.html
+++ b/Farmer/templates/Farmer/index.html
@@ -1,30 +1,40 @@
 {% extends "Farmer/base.html" %}
 {% load static %}
 {% block content %}
+          <section class="content-header">
+        <center><h1>
+          ข้อมูลเกษตรกร
+        </h1></center>
+      </section>
 <section class="content">
+
+{% if messages %}
+<div class="row">
+<div class="col-sm-6 col-sm-offset-3">
+ {% for message in messages %}
+    <center><p {% if message.tags == "success" %} class="message alert alert-success alert-dismissible"
+        {% elif message.tags == "error" %} class="message alert alert-danger alert-dismissible"
+            {% elif message.tags == "warning" %} class="message alert alert-warning alert-dismissible"
+    {% endif %}
+        >
+            {{ message }}
+        </p></center>
+
+    {% endfor %}
+    </div>
+    </div>
+{% endif %}
+
+
+
 <div class="row" >
-    <div class="col-md-2">
+    <div class="col-sm-3">
 <a type="button" class="btn btn-block btn-primary btn-lg" href="{% url 'createFarmer' user.id %}">เพิ่มข้อมูลเกษตรกร</a>
         </div>
 
 
-
-    <div class="col-md-3">
-    <form action='' method='GET' class='sidebar-form'>
-        <div class="input-group">
-          <input type="text" name="q" class="form-control" placeholder="ค้นหา...." value='{{ request.get.q }}'>
-          <span class="input-group-btn">
-                <button type="submit" name="search" id="search-btn" class="btn btn-flat" value="Search"><i class="fa fa-search"></i>
-                </button>
-              </span>
-        </div>
-      </form>
-    </div>
-
-
-
     <div class="col-md-5"></div>
-    <div class="col-md-2"><a type="button" class="btn btn-block btn-danger btn-lg" href="{% url 'logout' %}">ออกจากระบบ</a></div>
+    <div class="col-md-2"></div>
 </div>
     <br>
 
@@ -33,7 +43,7 @@
 
       <div class="row">
         <!-- /.col -->
-        <div class="col-md-6">
+        <div class="col-md-12">
             <div class="box box-primary">
                 <div class="box-header">
                 <h3 class="box-title">ตาราง ข้อมูลเกษตรกร</h3>
@@ -44,7 +54,17 @@
 			<div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
 				<form class="login100-form validate-form" action="" method="post" name="Login_Form" >
             <div class="box-body">
-              <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap"><div class="row"><div class="col-sm-6"></div><div class="col-sm-6"></div></div><div class="row"><div class="col-sm-12"><table id="example2" class="table table-bordered table-hover dataTable" role="grid" aria-describedby="example2_info">
+              <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap">
+                  <div class="row"><div class="col-sm-6">
+
+                  </div>
+                      <div class="col-sm-6">
+
+                      </div>
+                  </div>
+                  <div class="row">
+                      <div class="col-sm-12">
+                          <table id="example2" class="table table-bordered table-hover dataTable" role="grid" aria-describedby="example2_info">
                 <thead>
                 <tr role="row">
                     <th class="sorting_asc" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Rendering engine: activate to sort column descending">ชื่อ - นามสกุล</th>
@@ -57,7 +77,7 @@
                 <tbody>
                 {% for VF in famerpage %}
                 <tr role="row" class="odd">
-                  <td><a type="button"  href="{% url 'viewFarmer' user.id VF.id %}" >{{ VF.name }} {{ VF.lastname }}</a></td>
+                  <td><a type="button"  href="{% url 'viewFarmer' VF.id  %}" >{{ VF.name }} {{ VF.lastname }}</a></td>
                     <td>{{ VF.age }}</td>
                     <td>{{ VF.address }}</td>
                     <td>{{ VF.tel }}</td>
