--- a/Farmer/templates/Farmer/CreateHarvest.html
+++ b/Farmer/templates/Farmer/CreateHarvest.html
@@ -2,14 +2,38 @@
 {% load crispy_forms_tags %}
 {% load static %}
 {% block content %}
+
+    <section class="content-header">
+        <center><h3>
+          เพิ่มข้อมูลการเก็บเกี่ยวชองเกษตรกร
+        </h3></center>
+      </section>
+<section class="content">
+
+{% if messages %}
+<div class="row">
+<div class="col-sm-6 col-sm-offset-3">
+ {% for message in messages %}
+    <center><p {% if message.tags == "success" %} class="message alert alert-success alert-dismissible"
+        {% elif message.tags == "error" %} class="message alert alert-danger alert-dismissible"
+            {% elif message.tags == "warning" %} class="message alert alert-warning alert-dismissible"
+    {% endif %}
+        >
+            {{ message }}
+        </p></center>
+
+    {% endfor %}
+    </div>
+    </div>
+{% endif %}
+
     <br>
     <div class="row">
     <div class="col-md-1"></div>
         <div class="col-md-10">
-    <div class="box box-primary">
+    <div class="box box-success">
             <div class="box-header with-border">
-                <h3 class="box-title">เพิ่มข้อมูลการเก็บเกี่ยวของ</h3><br>
-                <h3>{{ viewplant.fruit_name }}</h3> <h3 class="box-title">สายพันธุ์ :</h3> <h3>{{ viewplant.fruit_breed }}</h3>
+                <center><h3 class="box-title">เพิ่มข้อมูลการเก็บเกี่ยวของ '{{ viewplant.fruit_name }}' สายพันธุ์ : '{{ viewplant.fruit_breed }}' </h3> </center>
             </div>
             <div class="box-body">
                 <div class="form-group">
