--- a/Farmer/templates/Farmer/CreatePlant.html
+++ b/Farmer/templates/Farmer/CreatePlant.html
@@ -6,9 +6,9 @@
     <div class="row">
     <div class="col-md-1"></div>
         <div class="col-md-10">
-    <div class="box box-primary">
+    <div class="box box-success">
             <div class="box-header with-border">
-              <h3 class="box-title">เพิ่มข้อมูลการปลูกของ {{ viewfarmer.name }}   {{ viewfarmer.lastname}} </h3>
+              <h3 class="box-title">เพิ่มข้อมูลการปลูกของ '{{ viewfarmer.name }}   {{ viewfarmer.lastname}}' </h3>
             </div>
             <div class="box-body">
                 <div class="form-group">
