--- a/Farmer/templates/Farmer/ViewHarvest.html
+++ b/Farmer/templates/Farmer/ViewHarvest.html
@@ -1,24 +1,45 @@
 {% extends "Farmer/base.html" %}
 {% load static %}
 {% block content %}
+    <section class="content-header">
+        <center><h1>
+         <span> ข้อมูลการเก็บเกี่ยวของ '{{ viewplant.fruit_name }}' สายพันธุ์ : '{{ viewplant.fruit_breed }}'</span>
+        </h1></center>
+    </section>
+    <section class="content">
+        {% if messages %}
+            <div class="row">
+                <div class="col-sm-6 col-sm-offset-3">
+                    {% for message in messages %}
+                        <center><p {% if message.tags == "success" %} class="message alert alert-success alert-dismissible"
+                        {% elif message.tags == "error" %} class="message alert alert-danger alert-dismissible"
+                        {% elif message.tags == "warning" %} class="message alert alert-warning alert-dismissible"
+                        {% endif %}>
+                            {{ message }}
+                        </p></center>
+                    {% endfor %}
+                </div>
+            </div>
+        {% endif %}
 
-<section class="content">
 <div class="row" >
     <div class="col-md-4">
-<a type="button" class="btn btn-block btn-primary btn-lg" href="{% url 'createHarvest' viewharvests.Farmer_id_id viewharvests.id user.id %}">เพิ่มข้อมูลการเก็บเกี่ยวของ{{ viewplant.fruit_name }} {{ viewplant.fruit_breed }}</a>
+<a type="button" class="btn btn-block btn-primary btn-lg" style="background-color: #67b168;" href="{% url 'createHarvest' viewharvests.Farmer_id_id viewharvests.id user.id %}">เพิ่มข้อมูลการเก็บเกี่ยวของ{{ viewplant.fruit_name }} {{ viewplant.fruit_breed }}</a>
+    </div>
+    <div class="col-md-6">
+
     </div>
     <div class="col-md-2">
-        <a type="button" class="btn btn-block btn-danger btn-lg" href="{% url 'viewFarmer' viewfarmer.id %}">ย้อนกลับ</a>
+        <a type="button" class="btn btn-block btn-light btn-lg" href="{% url 'viewFarmer' viewfarmer.id %}">ย้อนกลับ</a>
     </div>
-    <div class="col-md-10"></div>
 </div>
     <br>
       <div class="row">
         <!-- /.col -->
         <div class="col-md-12">
-            <div class="box box-primary">
+            <div class="box box-success">
                 <div class="box-header">
-                <h3 class="box-title">ตาราง ข้อมูลการเก็บเกี่ยวของ {{ viewplant.fruit_name }} สายพันธุ์ : {{ viewplant.fruit_breed }}</h3>
+                <center><h3 class="box-title">ตาราง ข้อมูลการเก็บเกี่ยวของ '{{ viewplant.fruit_name }}' สายพันธุ์ : '{{ viewplant.fruit_breed }}' </h3></center>
 
                 </div>
             <!-- /.box-header -->
@@ -36,53 +57,27 @@
                     <td>{{ VH.product }} กิโลกรัม</td>
                     <td>{{ VH.years }}</td>
                   <td>
-                      <a type="button"  href="{% url 'editHarvest' viewharvests.Farmer_id_id viewharvests.id VH.id %}">[แก้ไข]</a>
-                      <a type="button"  href="{% url 'deleteHarvest' viewharvests.Farmer_id_id viewharvests.id VH.id %}">[ลบ]</a>
+                      <a type="button" class="btn btn-warning"  href="{% url 'editHarvest' viewharvests.Farmer_id_id viewharvests.id VH.id %}">[แก้ไข]</a>
+                      <a type="button" class="btn btn-danger" href="{% url 'deleteHarvest' viewharvests.Farmer_id_id viewharvests.id VH.id %}">[ลบ]</a>
                   </td>
                 </tr>
                 {% endfor %}
                 </tbody>
               </table></div></div>
-                          <div class="row">
-                      <div class="col-sm-5">
-                      </div>
-                      <div class="col-sm-7">
-                        <div class="pagination">
-                            <span class="step-links">
-        {% if famerpage.has_previous %}
-            <a href="?page=1">หน้าแรก</a>
-            <a href="?page={{ famerpage.previous_page_number }}">ก่อนหน้า</a>
-        {% endif %}
-
-        <span class="current">
-            หน้า {{ famerpage.number }}  จาก {{ famerpage.paginator.num_pages }}
-        </span>
-
-        {% if famerpage.has_next %}
-            <a href="?page={{ famerpage.next_page_number }}">ถัดไป</a>
-            <a href="?page={{ famerpage.paginator.num_pages }}">สุดท้าย</a>
-        {% endif %}
-    </span>
-</div>
-                      </div>
-                  </div>
                 </div>
             </div>
             </div>
         </div>
       <div class="col-md-12">
-            <div class="box box-primary">
+            <div class="box box-success">
                 <div class="box-header">
-                <h3 class="box-title">กราฟแสดงข้อมูลการเก็บเกี่ยวของ {{ viewplant.fruit_name }} สายพันธุ์ : {{ viewplant.fruit_breed }}</h3>
+                <center><h3 class="box-title">กราฟแสดงข้อมูลการเก็บเกี่ยวของ {{ viewplant.fruit_name }} สายพันธุ์ : {{ viewplant.fruit_breed }}</h3></center>
                 </div>
-                <div id="plot">
-
+                    <div id="plot">
                     <script>
-
                         var data = [{
                         x: [{% for VH in viewharvest %}{{ VH.years }},{% endfor %}],
                         y: [{% for VH in viewharvest %}{{ VH.product }},{% endfor %}],
-
                         type: 'bar'
                         }];
                         Plotly.newPlot('plot', data, {}, {showSendToCloud:true});
@@ -94,10 +89,10 @@
       </div>
       <div class="row">
       <div>
-          <div class="col-md-7">
-            <div class="box box-primary">
+          <div class="col-md-12">
+            <div class="box box-success">
                 <div class="box-header">
-                <h3 class="box-title">กราฟแสดงข้อมูลการเก็บเกี่ยวของ {{ viewplant.fruit_name }} สายพันธุ์ : {{ viewplant.fruit_breed }}</h3>
+                <center><h3 class="box-title">กราฟแสดงข้อมูลการเก็บเกี่ยวของ {{ viewplant.fruit_name }} สายพันธุ์ : {{ viewplant.fruit_breed }}</h3></center>
                 </div>
                 <div id="LinePlot">
                     <script>
@@ -115,12 +110,12 @@
       </div>
       </div>
       <div>
-          <div class="col-md-5">
-            <div class="box box-primary">
+          <div class="col-md-12">
+            <div class="box box-success">
                 <div class="box-header">
-                <h3 class="box-title">กราฟแสดงข้อมูลการเก็บเกี่ยวของ {{ viewplant.fruit_name }} สายพันธุ์ : {{ viewplant.fruit_breed }}</h3>
+                <center><h3 class="box-title">กราฟแสดงข้อมูลการเก็บเกี่ยวของ {{ viewplant.fruit_name }} สายพันธุ์ : {{ viewplant.fruit_breed }}</h3></center>
                 </div>
-                <div id="pie-charts">
+                <center><div id="pie-charts">
                     <script>
                         var data = [{
                         values: [{% for VH in viewharvest %}{{ VH.product }},{% endfor %}],
@@ -135,6 +130,8 @@
                         Plotly.newPlot('pie-charts', data, layout);
                     </script>
                 </div>
+                    </center>
+
             </div>
       </div>
       </div>
