--- a/Farmer/templates/Farmer/ViewPlant.html
+++ b/Farmer/templates/Farmer/ViewPlant.html
@@ -1,23 +1,45 @@
 {% extends "Farmer/base.html" %}
 {% load static %}
 {% block content %}
-<section class="content">
+    <section class="content-header">
+        <center><h1>
+         <span> ข้อมูลการปลูกของ '{{ viewfarmer.name }}   {{ viewfarmer.lastname}}'</span>
+        </h1></center>
+    </section>
+    <section class="content">
+        {% if messages %}
+            <div class="row">
+                <div class="col-sm-6 col-sm-offset-3">
+                    {% for message in messages %}
+                        <center><p {% if message.tags == "success" %} class="message alert alert-success alert-dismissible"
+                        {% elif message.tags == "error" %} class="message alert alert-danger alert-dismissible"
+                        {% elif message.tags == "warning" %} class="message alert alert-warning alert-dismissible"
+                        {% endif %}>
+                            {{ message }}
+                        </p></center>
+                    {% endfor %}
+                </div>
+            </div>
+        {% endif %}
+
 <div class="row" >
     <div class="col-md-4">
-<a type="button" class="btn btn-block btn-primary btn-lg" href="{% url 'createPlant' viewfarmer.id user.id %}">เพิ่มข้อมูลการปลูกของ {{ viewfarmer.name }}</a>
+<a type="button" class="btn btn-block btn-primary btn-lg" href="{% url 'createPlant' viewfarmer.id user.id %}" style="background-color: #67b168;">เพิ่มข้อมูลการปลูกของ {{ viewfarmer.name }}</a>
+    </div>
+    <div class="col-md-6">
+
     </div>
     <div class="col-md-2">
-        <a type="button" class="btn btn-block btn-danger btn-lg" href="{% url 'index' %}">ย้อนกลับ</a>
+        <a type="button" class="btn btn-block btn-light btn-lg right" href="{% url 'index' %}" >ย้อนกลับ</a>
     </div>
-    <div class="col-md-10"></div>
 </div>
     <br>
       <div class="row">
         <!-- /.col -->
         <div class="col-md-12">
-            <div class="box box-primary">
+            <div class="box box-success">
                 <div class="box-header">
-                <h3 class="box-title">ตาราง ข้อมูลการปลูกของ {{ viewfarmer.name }}   {{ viewfarmer.lastname}}  </h3>
+               <center> <h3 class="box-title">ตาราง ข้อมูลการปลูกของ '{{ viewfarmer.name }}   {{ viewfarmer.lastname}}'  </h3> </center>
                 </div>
             <!-- /.box-header -->
             <div class="box-body">
@@ -36,9 +58,8 @@
                     <td>{{ VP.fruit_breed }}</td>
                     <td>{{ VP.scale }} ไร่</td>
                   <td>
-
-                      <a type="button" href="{% url 'editPlant' VP.Farmer_id_id VP.id %}">[แก้ไข]</a>
-                      <a type="button" href="{% url 'deletePlant' VP.Farmer_id_id VP.id %}">[ลบ]</a>
+                      <a type="button" class="btn btn-warning" href="{% url 'editPlant' VP.Farmer_id_id VP.id %}">[แก้ไข]</a>
+                      <a type="button" class="btn btn-danger" href="{% url 'deletePlant' VP.Farmer_id_id VP.id %}">[ลบ]</a>
                   </td>
                 </tr>
                 {% endfor %}
@@ -49,24 +70,42 @@
             </div>
         </div>
       <div>
-                    <div class="col-md-5">
-            <div class="box box-primary">
+                    <div class="col-md-12">
+            <div class="box box-success">
                 <div class="box-header">
                 <h3 class="box-title">กราฟแสดงข้อมูลการปลูกของ {{ viewfarmer.name }} {{ viewfarmer.lastname }}</h3>
                 </div>
-                <div id="pie-charts">
+                <center><div id="pie-charts">
                     <script>
                         var data = [{
                         values: [{% for VP in viewplant %}{{ VP.scale }},{% endfor %}],
                         labels: [{% for VP in viewplant %}"{{ VP.fruit_name }}",{% endfor %}],
                         type: 'pie'
                         }];
-
                         var layout = {
                                         height: 400,
                                         width: 500
                                         };
                         Plotly.newPlot('pie-charts', data, layout);
+                    </script>
+                </div>
+                </center>
+            </div>
+      </div>
+            <div class="col-md-12">
+            <div class="box box-success">
+                <div class="box-header">
+                <center><h3 class="box-title">กราฟแสดงข้อมูลการปลูกของ {{ viewfarmer.name }} {{ viewfarmer.lastname }}</h3></center>
+                </div>
+                    <div id="plot">
+                    <script>
+                        var data = [{
+                        x: [{% for VP in viewplant %}'{{ VP.fruit_name }}',{% endfor %}],
+                        y: [{% for VP in viewplant %}{{ VP.scale }},{% endfor %}],
+                        type: 'bar'
+                        }];
+                        Plotly.newPlot('plot', data, {}, {showSendToCloud:true});
+
                     </script>
                 </div>
             </div>
