--- a/Farmer/templates/Farmer/logout.html
+++ b/Farmer/templates/Farmer/logout.html
@@ -43,7 +43,7 @@
 <body>
 
 	<div class="limiter">
-		<div class="container-login100" style="background-image: url({% static 'Login/images/bg-01.jpg' %} );">
+		<div class="container-login100" style="background-image: url({% static 'Login/images/Green.jpg' %} );">
 			<div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
 				<form class="login100-form validate-form" action="" method="post" name="Login_Form" >
 					<span class="login100-form-title p-b-49">
